Update index.html & workouts.js to use google charts Add workout_scraper_test.py to add filler data to database Update workout.js & workout.css to:     * Update date-circles position, size, and animation     * Fade in of workouts on hover     * Animation of date-circles on back button click Todo:     * Fill in charts with relevent data     * Replace 'edit' & 'delete' with icons     * Update workout.html to add new workouts

--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="The HTML5 Barebones">
     <meta name="author" content="slwilson">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="{% static 'Chart.js' %}"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="{% static 'workout.js' %}"></script> 
     <link rel="stylesheet" href="{% static 'workout.css' %}"> 
     <!--[if lt IE 9]>
