--- a/workout/templates/workout.html
+++ b/workout/templates/workout.html
@@ -3,7 +3,7 @@
 <div id='content'>
     
     <div id='workout-chart-border' style='height:300px'>
-        <div id='workout-chart'></div>
+        {% include "chart.html" %}
     </div>
     <div id='workout-table-border'> 
         <div id='workout-table'>
