--- a/workout/templates/year.html
+++ b/workout/templates/year.html
@@ -3,12 +3,14 @@
 {% block content %}
     <div id='container'>
         {% for y in years %}
-        <div href='{{y.year}}' class='date-circle' workouts='{{y.workouts}}'>
+        <div  class='date-circle-container' workouts='{{y.workouts}}'>
+            <div href='{{y.year}}' class='date-circle'>
             <div class='date-circle-date'>{{y.year}}</div>
                 <div class='date-circle-workouts'>
                     <div class='date-circle-workouts-text'>{{y.workouts}}<br>workouts</div>
                     <div class='date-circle-workouts-bg'></div>
                 </div>
+            </div>
             </div>
         {% endfor %}
     </div>
