--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -91,28 +91,29 @@ body {
 }
 
 #container{
-    position: absolute;
-    padding-top: 30%;
-    margin: auto;
+    width: 100%;
+    display:table;
+    margin: 10% auto;
+    text-align:center;
+}
+
+.date-circle-container{
+    position: relative;
+    display:inline-block;
+    vertical-align:middle;
+    margin: 1%;
+}
+.date-circle, .date-circle-active {
+    
+    position:absolute;
     top:0;
     bottom:0;
     left:0;
-    right:0;
-    width:50%;
-    height:100%;
-    overflow:hidden;
-    z-index: -5;
-}
-
-
-.date-circle, .date-circle-active {
-    position:relative;
-    float:left;
-    margin: -1000px 2% 2% 2%;
-    max-width: 600px;
-    min-width: 100px;
-    width: 300px;
-    height: 300px;
+    right:0; 
+    margin:auto;
+    width: 0px;
+    height: 0px;
+    opacity: 0;
     border: 0.3em solid white;
     border-radius: 50%;
     background-color:rgba(0, 0, 0, 0.1);
@@ -123,20 +124,33 @@ body {
     text-align: center;
     vertical-align: middle;
     line-height: 300px;
+    -ms-transform-origin: 50% 50%; /* IE 9 */
+    -webkit-transform-origin: 50% 50%; /* Chrome, Safari, Opera */
+    transform-origin: 50% 50%;
+    overflow:hidden;
+}
+
+#date-circle:nth-child(4n+1){
+    clear:left;
 }
 
 .date-circle-date{
-    width:100%;
-    height: 100%;
-    top:0;
-    position:absolute;
+    display:none;
+    position: absolute;
+    top: 0;
     left:0;
-    line-height: 250%;
+    width:100%;
+    height:100%;
     text-shadow: 0.05em 0.05em 0.05em rgba(0, 0, 0, 0.2);
 }
 
 .date-circle-workouts {
     display:none;
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
 }
 
 .date-circle-workouts-text {
@@ -149,16 +163,11 @@ body {
 }
 
 .date-circle-workouts-bg{
-    position: absolute;
-    top: 0;
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     background-color:rgba(0, 0, 0, 0.9);
     border: 1px solid black;
-    border-radius: 50%;
-    left:0;
-    right:0;
-    margin:auto; 
+    border-radius: 50%; 
 }
 
 
@@ -185,7 +194,7 @@ body {
 #workout-chart-border {
     display:none;
     width:60%;
-    margin:auto;
+    margin: 0 auto 1% auto;
     border:1px solid #d8d8d8;
     border-radius: 0.5em;
     padding:1% 1%;
