--- a/workout/templates/month.html
+++ b/workout/templates/month.html
@@ -3,11 +3,13 @@
 {% block content %}
     <div id='container'>
         {% for m in months %}
-        <div href='/{{year}}/{{m.month}}' class='date-circle' workouts='{{m.workouts}}'>
+        <div  class='date-circle-container' workouts='{{m.workouts}}'>
+            <div href='/{{year}}/{{m.month}}' class='date-circle'>
             <div class='date-circle-date'>{{m.month}}</div>
-            <div class='date-circle-workouts'>
-                <div class='date-circle-workouts-text'>{{m.workouts}}<br>workouts</div>
-                <div class='date-circle-workouts-bg'></div>
+                <div class='date-circle-workouts'>
+                    <div class='date-circle-workouts-text'>{{m.workouts}}<br>workouts</div>
+                    <div class='date-circle-workouts-bg'></div>
+                </div>
             </div>
         </div>
         {% endfor %}
