--- a/workout/templates/header.html
+++ b/workout/templates/header.html
@@ -5,7 +5,7 @@
             <div href="/{{year}}" class='header-date' id='header-back'><<</div>
             <div class='header-date' id='header-month'>{{month}}</div>
         {% else %}
-            <div href="{% url 'workout.views.year_view' %}" class='header-date' id='header-back'><<</div>
+            <div href="{% url 'workout.views.year_view' %}" class='header-date' id='header-back'><<</dv>
         {% endif %}
         <div class='header-date' id='header-year'>{{year}}</div>  
     {% endif %} 
