--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -4,9 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
-    <title>Workouts</title>
-    <meta name="description" content="The HTML5 Barebones">
+    <title>Workout Log</title>
     <meta name="author" content="slwilson">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -20,5 +18,6 @@
 <body>
     {% include 'header.html' %}
     {% block content %}{% endblock %}
+    {% include 'footer.html' %}
 </body>
 </html>
