--- a/workout/templates/main.html
+++ b/workout/templates/main.html
@@ -1,13 +1,12 @@
 {% extends 'index.html' %}
 {% block content %}
 <div id='main'>
-    <p>{{date_range.cur}}</p>
-   <p>{{date_range.past}}</p>
-    <ul>
-    {% for w in workouts %}
-        <li>{{w.date}}:{{w.name}}</li>
-    {% endfor %}
-    </ul>
+    <p id='date_cur'>{{date_cur}}</p>
+    
+    <button type='button' class='date-button' date='{{past_week}}'>Week</button>
+    <button type='button' class='date-button' date='{{past_month}}'>Month</button>
+    <button type='button' class='date-button' date='{{past_year}}'>Year</button>
+    {% include 'range.html' %}
 </div>
 
 {% endblock %}
