Update views.py to send empty workouts along with full workouts for entire date range Update workout.js to reverse workout list & show appropriate abbreviated date format on chart

--- a/workout/templates/chart.html
+++ b/workout/templates/chart.html
@@ -1,1 +1,7 @@
-<div id='workout-chart'></div>
+<ul id='workout-list'>
+{% for w in workouts %}
+    <li class='workout' date='{{w.date}}'
+        name='{{w.name}}' cal='{{w.calories}}'>{{w.date}}:{{w.name}}
+    </li>
+{% endfor %}
+</ul>
