--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -31,7 +31,7 @@ body {
 }
 ol, ul, a {
     list-style: none;
-    color: white;
+    color: black;
 }
 blockquote, q {
     quotes: none;
@@ -55,17 +55,38 @@ a {
 
 body{
     font-family: 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans Unicode', sans-serif;
-    color: white;
-    background: #014cde;
-    background: -moz-linear-gradient(top,  #014cde 0%, #12a0e4 100%);
-    background: -webkit-linear-gradient(top,  #014cde 0%,#12a0e4 100%);
-    background: linear-gradient(to bottom,  #014cde 0%,#12a0e4 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#014cde', 
-        endColorstr='#12a0e4',GradientType=0 );
+    color: #202020;
+    background: #f6f6f6;
     height:100vh;
     width:100vw;
     
 }
 
-#header{}
+#header {
+    border-bottom: 10px solid #206276;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+#header-inner, #content {
+    width:60%;
+    padding: 1%;
+    margin:auto;
+}
+
+#content {
+    border: 1px solid #b8b8b8;
+}
+
+#content section header{
+    background: #F3F3F3;
+    border: 1px solid #DEDEDE;
+    border-radius: 5px;
+    padding: 1%;
+    
+}
+
+#chart-date-buttons, #chart-date-range {
+    display: inline-block;
+}
 
