--- a/workout/templates/chart.html
+++ b/workout/templates/chart.html
@@ -1,15 +1,15 @@
-<div id='chart-data' style='display:none;'></div>
+<div style='display:none;'>  
+    <div id='total-workouts'>{{total_workouts}}</div>
+    <div id='total-calories'>{{total_calories}}</div>
+    <div id='total-duration'>{{total_duration}}</div>
 
-<div id='total-workouts'>{{total_workouts}}</div>
-<div id='total-calories'>{{total_calories}}</div>
-<div id='total-duration'>{{total_duration}}</div>
-
-<ul id='workout-list' style='display:none;'>
-{% for w in workouts %}
-    <li class='workout' date='{{w.date}}'
-        name='{{w.name}}' cal='{{w.calories}}'
-        heartrate='{{w.heartrate}}' duration='{{w.hours}}:{{w.minutes}}:{{w.seconds}}'>
-        {{w.date}}:{{w.name}}
-    </li>
-{% endfor %}
-</ul>
+    <ul id='chart-workouts'>
+        {% for w in workouts %}
+            <li class='chart-workout' date='{{w.date}}'
+                name='{{w.name}}' cal='{{w.calories}}'
+                heartrate='{{w.heartrate}}' duration='{{w.hours}}:{{w.minutes}}:{{w.seconds}}'>
+                {{w.date}}:{{w.name}}
+            </li>
+        {% endfor %}
+    </ul>
+</div>
