--- a/workout/static/workout.css
+++ b/workout/static/workout.css
@@ -80,7 +80,7 @@ body{
 
 #content section header,
 #content section footer,
-.chart-date-range-group {
+.date-range-group {
     background: #F3F3F3;
     border: 1px solid #DEDEDE;
     border-radius: 5px;
@@ -97,29 +97,26 @@ body{
     border: none;
 }
 
-#chart-date-container,
-#list-date-container{
+#date-container{
     width:100%;
     display:table;
 }
 
-#chart-date-range, 
-#list-date-buttons{
+#date-range{
     width: 50%;
     display:table-cell;
     text-align:right;
     vertical-align: middle;
 }
 
-#chart-date-buttons, 
-#list-date-container h2{
+#date-buttons{
     width: 50%;
     display:table-cell;
     vertical-align: middle;
 }
 
-.chart-date-button,
-.chart-stat-button {
+.date-button,
+.field-button {
     border: none;
     background: #BFBFBF;
     color: white;
@@ -127,21 +124,22 @@ body{
     padding: 0.5% 3%;
 }
 
-.chart-date-button-active,
-.chart-stat-button-active{
+.field-button-active,
+.date-button-active{
     background:pink;
 }
 
-#chart-type-buttons button{
+#type-buttons button{
     font-size: 1.5em;
     padding: 0.2% 1%;
 }
  
-#chart-date-range div, .chart-date-range-group p{
+#date-range div, 
+.date-range-group p{
     display: inline-block;
 }
 
-#workout-chart {
+#chart {
     padding-bottom:1%;
     border-bottom: 1px solid #D6D6D6;
 }
@@ -167,8 +165,4 @@ body{
 
 #totals-stats ul li {
     display:table-cell;
-}
-
-#list-date-container h2{
-    font-size: 2em;
 }
