--- a/workout/templates/index.html
+++ b/workout/templates/index.html
@@ -2,22 +2,30 @@
 
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>Workout Log</title>
     <meta name="author" content="slwilson">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="{% static 'moment/moment.js'%}"></script>
     <script src="{% static 'workout.js' %}"></script> 
     <link rel="stylesheet" href="{% static 'workout.css' %}"> 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+
+
 </head>
 
 <body>
     {% include 'header.html' %}
     {% block content %}{% endblock %}
     {% include 'footer.html' %}
+
+
+
 </body>
 </html>
