--- a/workout/templates/list.html
+++ b/workout/templates/list.html
@@ -1,7 +1,24 @@
-<div id='list-date' year='{{list_year}}' month='{{list_month}}'></div>
+<div id='totals-list'>
+    <h2>Totals:</h2>
+    <div id='totals-stats'>    
+        <ul>
+            <li>
+                <span id='total-workouts-str'>{{total.workouts}}</span>
+                <span>workouts</span>
+            <li>
+                <span id='total-calories-str'>{{total.calories}}</span>
+                <span>calories</span>
+            </li>
+            <li>
+                <span id='total-duration-str'>{{total.duration}}</span>
+                <span>duration</span>
+            </li>
+        </ul>
+    </div>
+</div>
 
-<ul id='list-workouts'>
-{% for w in workouts %}
+<ul id='history'>
+{% for w in workouts%}
     <li class='list-workout' date='{{w.date}}'
         name='{{w.name}}' cal='{{w.calories}}'
         heartrate='{{w.heartrate}}' duration='{{w.hours}}:{{w.minutes}}:{{w.seconds}}'>
